force-app/main/default/objects/Manual_Creation_Panel_Task__c/Manual_Creation_Panel_Task__c.object-meta.xml
<CustomObject>
    <label>Recurring Task</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Task  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>