force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Date_Cancelled_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled_Inactive__c</fullName>
    <label>Date (Cancelled/Inactive)</label>
    <type>Date</type>
</CustomField>