force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Is_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurring Task</label>
    <type>Checkbox</type>
</CustomField>