force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Last_Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Occurrence_Date__c</fullName>
    <label>Last Occurrence Date</label>
    <type>Date</type>
</CustomField>