force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Last_Recurrence_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Last_Recurrence_Reminder__c</fullName>
    <label>Last Occurrence Reminder</label>
    <type>Date</type>
</CustomField>