force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Make_this_Task_visible_to__c.field-meta.xml
<CustomField>
    <fullName>Make_this_Task_visible_to__c</fullName>
    <label>Make this Task visible to</label>
    <type>TextArea</type>
</CustomField>