force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <label>Next Task Due Date</label>
    <type>Date</type>
</CustomField>