force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Next_Occurence_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Occurence_Date__c</fullName>
    <label>Next Occurrence Date</label>
    <type>Date</type>
</CustomField>