force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Next_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder_Date__c</fullName>
    <formula>IF( NOT( ISBLANK(Reminder_days_before_due_date__c) ) &amp;&amp; Reminder_days_before_due_date__c &gt; 0  ,  IF(Next_Due_Date__c  - Reminder_days_before_due_date__c  &gt;=  Next_Occurence_Date__c , Next_Due_Date__c  - Reminder_days_before_due_date__c, null) , null)</formula>
    <label>Next Occurrence Reminder</label>
    <type>Date</type>
</CustomField>