force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <label>Patient Status</label>
    <type>TextArea</type>
</CustomField>