force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Platform_level_Task__c.field-meta.xml
<CustomField>
    <fullName>Platform_level_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Toggle in study configuration will be ignored</inlineHelpText>
    <label>Platform-level Task</label>
    <type>Checkbox</type>
</CustomField>