force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Recurrence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_End_Date__c</fullName>
    <label>Task End Date</label>
    <type>Date</type>
</CustomField>