force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date__c</fullName>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>