force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Reminder_days_before_due_date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_days_before_due_date__c</fullName>
    <label>Reminder days before due date</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>