force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Task Start Date</label>
    <type>Date</type>
</CustomField>