force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <label>Study</label>
    <type>TextArea</type>
</CustomField>