force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>