force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/TaskConfig__c.field-meta.xml
<CustomField>
    <fullName>TaskConfig__c</fullName>
    <label>TaskConfig</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>