force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/TaskFilter__c.field-meta.xml
<CustomField>
    <fullName>TaskFilter__c</fullName>
    <label>TaskFilter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>