force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/TaskName__c.field-meta.xml
<CustomField>
    <fullName>TaskName__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/n/Manual_Creation_Panel?c__id=&quot; + Id, Task_Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Name</label>
    <type>Text</type>
</CustomField>