force-app/main/default/objects/Manual_Creation_Panel_Task__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <type>TextArea</type>
</CustomField>