force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/Due_date_for_weekly_task.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_date_for_weekly_task</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Recurrence_End_Date__c -  Start_Date__c &lt; 7, ISPICKVAL( Recurrence_Frequency__c , &apos;Weekly&apos;) )</errorConditionFormula>
    <errorMessage>This task cannot be scheduled for a weekly recurrence. Please modify the end date and try again.</errorMessage>
</ValidationRule>