force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/Due_date_validation_for_yearly_task.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_date_validation_for_yearly_task</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Recurrence_End_Date__c &lt;  ADDMONTHS( Start_Date__c ,12), ISPICKVAL( Recurrence_Frequency__c , &apos;Yearly&apos;) )</errorConditionFormula>
    <errorMessage>This task cannot be scheduled for a yearly recurrence. Please modify the end date and try again.</errorMessage>
</ValidationRule>