force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/due_date_validation_monthly_task.validationRule-meta.xml
<ValidationRule>
    <fullName>due_date_validation_monthly_task</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Recurrence_End_Date__c &lt;  ADDMONTHS( Start_Date__c ,1), ISPICKVAL( Recurrence_Frequency__c , &apos;Monthly&apos;) )</errorConditionFormula>
    <errorMessage>This task cannot be scheduled for a monthly recurrence. Please modify the end date and try again.</errorMessage>
</ValidationRule>