force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/DueDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDate_Validation</fullName>
    <active>false</active>
    <description>Due Date can not be earlier than next recurrence date.</description>
    <errorConditionFormula>ISCHANGED(Recurrence_End_Date__c) &amp;&amp; Recurrence_End_Date__c  &lt;  Next_Occurence_Date__c - 1</errorConditionFormula>
    <errorDisplayField>Recurrence_End_Date__c</errorDisplayField>
    <errorMessage>Task End Date can not be less than (Next Recurrence Date - 1) day</errorMessage>
</ValidationRule>