force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/EditAccess_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>EditAccess_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(PRIORVALUE( Status__c ), &apos;Active&apos; ))</errorConditionFormula>
    <errorMessage>Records with Active status only have the edit access</errorMessage>
</ValidationRule>