force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/No_Reminder_Date_for_Daily.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Reminder_Date_for_Daily</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Recurrence_Frequency__c , &apos;Daily&apos;) &amp;&amp;  NOT( ISBLANK( Reminder_days_before_due_date__c ) )</errorConditionFormula>
    <errorDisplayField>Reminder_days_before_due_date__c</errorDisplayField>
    <errorMessage>Reminder cannot be set for task with daily recurrence</errorMessage>
</ValidationRule>