force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/StartDate_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_Not_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Start_Date__c)  &amp;&amp; PRIORVALUE(Start_Date__c)  &lt;&gt;  Next_Occurence_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date can not be change, Since first instance already launched.</errorMessage>
</ValidationRule>