force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/StartDate_not_greaterthan_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_not_greaterthan_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  Recurrence_End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date should not be greater than End Date</errorMessage>
</ValidationRule>