force-app/main/default/objects/Manual_Creation_Panel_Task__c/validationRules/StartDate_should_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_should_be_in_future</fullName>
    <active>true</active>
    <description>Start Date should be in future.</description>
    <errorConditionFormula>ISCHANGED(Start_Date__c) &amp;&amp; Start_Date__c  &lt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Value must be Greater than Today.</errorMessage>
</ValidationRule>