force-app/main/default/objects/Manual_Creation_Panel_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Is_Recurrence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>